test/ddc-spec/error/01-ErrorExp/26-PrivateWitnessInvalid/Main.ds

module Main where

foo = private r with {Nat#} in ()
